# transdubber

./: .gitignore  README.md  improve_translation.py  justfile  pyproject.toml  transdub_cli.py
transdub/: __init__.py  cli.py  config.py  cut_silences.py  dub_video.py  dubbing.py  improve.py  pipeline.py  postprocess.py  srt_utils.py  transcribe.py  translate_video.py  tts.py  tts_speak.py  voice_clone.py
